zoneminder/mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: zoneminder-mysql
  labels:
    app: zoneminder
spec:
  ports:
    - port: 3306
  selector:
    app: zoneminder
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zoneminder-mysql
  labels:
    app: zoneminder
spec:
  selector:
    matchLabels:
      app: zoneminder
      tier: mysql
    strategy:
      type: Recreate
    template:
      metadata:
        labels:
          app: zoneminder
          tier: mysql
      spec:
        containers:
          - image: mysql:5.7
            name: mysql
            ports:
            - containerPort: 3306
              name: mysql
            volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
          volumes:
          - name: zoneminder-config
            persistentVolumeClaim:
              claimName: zoneminder-config
