zoneminder/zoneminder-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: zoneminder
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - cctv.clinetechnologysolutions.com
    secretName: zoneminder-cert
  rules:
  - host: cctv.clinetechnologysolutions.com
    http:
      paths:
      - path: /
        backend:
          serviceName: zoneminder
          servicePort: 80
